# KMtronicUSBRelay

./: README.md  example.py  kmtronic_usb_relay.py  pyproject.toml  setup.py
kmtronic_relay/: __init__.py  relay.py
